--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^24.2.1",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   }
