--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "paths": {
-      "@/*": ["src/*"],
-      "vue": ["src/code"]
+      "vue": ["src/code"],
+      "@/*": ["src/*"]
     },
     "baseUrl": ".",
 
