--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "paths": {
       "vue": ["src/code"],
+      "vue-router": ["src/code/router"],
       "@vue/*": ["src/code/*"],
       "@/*": ["src/*"]
     },
