--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "devDependencies": {
     "@types/node": "^24.2.1",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "vite": "catalog:"
   }
 }
