--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "pnpm -C app dev",
+    "build": "pnpm -F @vitejs/plugin-vue build"
+  },
   "devDependencies": {
     "@types/node": "^24.2.1",
     "typescript": "~5.8.3",
