fix: vue-plugin

--- a/packages/vite-plugin-vue/package.json
+++ b/packages/vite-plugin-vue/package.json
@@ -7,23 +7,24 @@
   "type": "module",
   "main": "dist/index.es.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs.js",
+      "import": "./dist/index.es.js"
     }
   },
   "license": "MIT",
   "scripts": {
-    "build": "vite build && tsc -p tsconfig.json",
-    "dev": "vite"
+    "build:js": "vite build",
+    "build:types": "tsc -p ./tsconfig.json",
+    "build": "pnpm run build:js && pnpm run build:types"
   },
   "dependencies": {
     "@vue/compiler-sfc": "workspace:*"
   },
   "peerDependencies": {
-    "vite": "catalog:",
-    "vue": "workspace:*"
+    "vite": "catalog:"
   }
 }
