--- a/packages/compiler-dom/package.json
+++ b/packages/compiler-dom/package.json
@@ -1,8 +1,21 @@
 {
   "name": "@vue/compiler-dom",
   "version": "0.0.1",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "type": "module",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js"
+    }
+  },
+  "scripts": {
+    "clean": "rimraf dist",
+    "build": "pnpm clean && rollup -c && tsc -p tsconfig.json"
+  },
   "sideEffects": false,
   "dependencies": {
     "@vue/compiler-core": "workspace:*"
