--- a/packages/compiler-dom/tsconfig.json
+++ b/packages/compiler-dom/tsconfig.json
@@ -1,12 +1,11 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["src"],
-  "references": [
-    { "path": "../compiler-core" }
-  ]
+  "exclude": ["dist"],
+  "references": [{ "path": "../compiler-core" }]
 }
