--- a/packages/runtime-dom/tsconfig.json
+++ b/packages/runtime-dom/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["src"],
+  "exclude": ["dist"],
   "references": [{ "path": "../runtime-core" }]
 }
