--- a/packages/vite-plugin-vue/package.json
+++ b/packages/vite-plugin-vue/package.json
@@ -1,25 +1,20 @@
 {
   "name": "@vitejs/plugin-vue",
   "version": "0.0.1",
-  "files": [
-    "dist"
-  ],
   "type": "module",
-  "main": "dist/index.es.js",
-  "module": "dist/index.es.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs.js",
-      "import": "./dist/index.es.js"
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js"
     }
   },
-  "license": "MIT",
   "scripts": {
-    "build:js": "vite build",
-    "build:types": "tsc -p ./tsconfig.json",
-    "build": "pnpm run build:js && pnpm run build:types"
+    "clean": "rimraf dist",
+    "build": "pnpm clean && rollup -c && tsc -p tsconfig.json"
   },
   "dependencies": {
     "@vue/compiler-sfc": "workspace:*"
