--- a/packages/vue-router/package.json
+++ b/packages/vue-router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-router",
+  "name": "pvue-router",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.cjs.js",
@@ -18,6 +18,6 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "vue": "workspace:*"
+    "pvue": "workspace:*"
   }
 }
