--- a/packages/vite-plugin-vue/package.json
+++ b/packages/vite-plugin-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vitejs/plugin-vue",
+  "name": "@pure-vue/vite-plugin",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.cjs.js",
