chore: changeset init

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "pnpm -r --filter \"./packages/*\" run build"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.6",
     "@rollup/plugin-typescript": "^12.1.4",
     "@types/node": "^24.2.1",
     "rimraf": "^6.0.1",
