--- a/packages/compiler-sfc/package.json
+++ b/packages/compiler-sfc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pure-vue/compiler-sfc",
+  "name": "@purevue/compiler-sfc",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.cjs.js",
@@ -18,7 +18,7 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "@pure-vue/compiler-core": "workspace:*",
-    "@pure-vue/compiler-dom": "workspace:*"
+    "@purevue/compiler-core": "workspace:*",
+    "@purevue/compiler-dom": "workspace:*"
   }
 }
