--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pure-vue/shared",
+  "name": "@purevue/shared",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.cjs.js",
