--- a/packages/vite-plugin-vue/package.json
+++ b/packages/vite-plugin-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pure-vue/vite-plugin",
+  "name": "@purevue/vite-plugin",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.cjs.js",
@@ -17,7 +17,7 @@
     "build": "pnpm clean && rollup -c && tsc -p tsconfig.json"
   },
   "dependencies": {
-    "@pure-vue/compiler-sfc": "workspace:*"
+    "@purevue/compiler-sfc": "workspace:*"
   },
   "peerDependencies": {
     "vite": "catalog:"
