--- a/packages/compiler-sfc/package.json
+++ b/packages/compiler-sfc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@purevue/compiler-sfc",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -20,5 +20,8 @@
   "dependencies": {
     "@purevue/compiler-core": "workspace:*",
     "@purevue/compiler-dom": "workspace:*"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
