--- a/packages/vue-router/package.json
+++ b/packages/vue-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@purevue/router",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -12,6 +12,13 @@
       "require": "./dist/index.cjs.js"
     }
   },
+  "typesVersions": {
+    "*": {
+      "vue-router": [
+        "dist/types/vue-router-alias.d.ts"
+      ]
+    }
+  },
   "scripts": {
     "clean": "rimraf dist",
     "build": "pnpm clean && rollup -c && tsc -p tsconfig.json"
@@ -19,5 +26,8 @@
   "sideEffects": false,
   "dependencies": {
     "@purevue/vue": "workspace:*"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
