--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@purevue/reactivity",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -19,5 +19,8 @@
   "sideEffects": false,
   "dependencies": {
     "@purevue/shared": "workspace:*"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
