--- a/packages/runtime-dom/package.json
+++ b/packages/runtime-dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@purevue/runtime-dom",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -21,5 +21,8 @@
     "@purevue/runtime-core": "workspace:*",
     "@purevue/shared": "workspace:*",
     "@purevue/reactivity": "workspace:*"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
