--- a/packages/vite-plugin-vue/package.json
+++ b/packages/vite-plugin-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@purevue/vite-plugin",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -21,5 +21,8 @@
   },
   "peerDependencies": {
     "vite": "catalog:"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
