--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf dist temp",
     "build": "pnpm clean && rollup -c && tsc -p tsconfig.json"
   },
   "sideEffects": false,
