chore: add keyworks

--- a/packages/runtime-dom/package.json
+++ b/packages/runtime-dom/package.json
@@ -24,5 +24,13 @@
   },
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "vue",
+    "vue3",
+    "source",
+    "source-code",
+    "vue-source",
+    "runtime-dom"
   ]
 }
