--- a/packages/vue-router/package.json
+++ b/packages/vue-router/package.json
@@ -22,5 +22,14 @@
   },
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "vue",
+    "vue3",
+    "source",
+    "source-code",
+    "vue-source",
+    "router",
+    "vue-router"
   ]
 }
