--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -27,5 +27,12 @@
   },
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "vue",
+    "vue3",
+    "source",
+    "source-code",
+    "vue-source"
   ]
 }
