--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "tslib": "^2.8.1",
     "typescript": "~5.8.3",
     "vite": "catalog:"
-  }
+  },
+  "keywords": [
+    "vue",
+    "vue3",
+    "source",
+    "source-code",
+    "vue-source"
+  ]
 }
