--- a/packages/compiler-sfc/package.json
+++ b/packages/compiler-sfc/package.json
@@ -23,5 +23,13 @@
   },
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "vue",
+    "vue3",
+    "source",
+    "source-code",
+    "vue-source",
+    "compiler-sfc"
   ]
 }
