--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -22,5 +22,13 @@
   },
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "vue",
+    "vue3",
+    "source",
+    "source-code",
+    "vue-source",
+    "reactivity"
   ]
 }
