--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,5 +19,13 @@
   "sideEffects": false,
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "vue",
+    "vue3",
+    "source",
+    "source-code",
+    "vue-source",
+    "shared"
   ]
 }
